2提交、各模块优化增强