@@ -7,6 +7,8 @@ import com.enterprise.auth.platform.common.TimeSupport;
 import com.enterprise.auth.platform.modules.audit.application.AuditService;
 import com.enterprise.auth.platform.modules.auth.application.AuthPermissionSnapshotInvalidationService;
 import com.enterprise.auth.platform.modules.dept.application.DeptTenantDataFacade;
+import com.enterprise.auth.platform.modules.menu.infrastructure.entity.SysMenuEntity;
+import com.enterprise.auth.platform.modules.menu.infrastructure.mapper.SysMenuMapper;
 import com.enterprise.auth.platform.modules.resource.application.CatalogService;
 import com.enterprise.auth.platform.modules.role.application.RoleTenantDataFacade;
 import com.enterprise.auth.platform.modules.security.application.SecurityPolicyApplicationService;
@@ -21,8 +23,6 @@ import com.enterprise.auth.platform.modules.tenant.infrastructure.mapper.SysTena
 import com.enterprise.auth.platform.modules.tenant.infrastructure.mapper.SysTenantPackageCapabilityMapper;
 import com.enterprise.auth.platform.modules.tenant.infrastructure.mapper.SysTenantPackageMapper;
 import com.enterprise.auth.platform.modules.user.application.UserTenantDataFacade;
-import com.enterprise.auth.platform.modules.tenant.application.TenantAccessPolicy;
-import com.enterprise.auth.platform.modules.tenant.application.TenantChangeLogApplicationService;
 import com.enterprise.auth.platform.common.authz.SecuritySupport;
 import com.enterprise.auth.platform.common.context.TenantContext;
 import com.enterprise.auth.platform.modules.tenant.interfaces.CreateTenantRequest;
@@ -46,12 +46,15 @@ public class TenantManagementService {
     private final SysTenantCapabilityMapper sysTenantCapabilityMapper;
     private final SysTenantPackageCapabilityMapper sysTenantPackageCapabilityMapper;
     private final SysTenantCapabilityOverrideMapper sysTenantCapabilityOverrideMapper;
+    private final SysMenuMapper sysMenuMapper;
     private final CatalogService catalogService;
     private final AuditService auditService;
     private final AuthPermissionSnapshotInvalidationService permissionSnapshotInvalidationService;
     private final TenantAccessPolicy tenantAccessPolicy;
     private final TenantChangeLogApplicationService tenantChangeLogApplicationService;
     private final SecurityPolicyApplicationService securityPolicyApplicationService;
+    private final TenantBootstrapFacade tenantBootstrapFacade;
+    private final TenantCapabilityResourceScopeFacade tenantCapabilityResourceScopeFacade;
 
     public TenantManagementService(
             SysTenantMapper sysTenantMapper,
@@ -62,12 +65,15 @@ public class TenantManagementService {
             SysTenantCapabilityMapper sysTenantCapabilityMapper,
             SysTenantPackageCapabilityMapper sysTenantPackageCapabilityMapper,
             SysTenantCapabilityOverrideMapper sysTenantCapabilityOverrideMapper,
+            SysMenuMapper sysMenuMapper,
             CatalogService catalogService,
             AuditService auditService,
             AuthPermissionSnapshotInvalidationService permissionSnapshotInvalidationService,
             TenantAccessPolicy tenantAccessPolicy,
             TenantChangeLogApplicationService tenantChangeLogApplicationService,
-            SecurityPolicyApplicationService securityPolicyApplicationService
+            SecurityPolicyApplicationService securityPolicyApplicationService,
+            TenantBootstrapFacade tenantBootstrapFacade,
+            TenantCapabilityResourceScopeFacade tenantCapabilityResourceScopeFacade
     ) {
         this.sysTenantMapper = sysTenantMapper;
         this.userTenantDataFacade = userTenantDataFacade;
@@ -77,12 +83,15 @@ public class TenantManagementService {
         this.sysTenantCapabilityMapper = sysTenantCapabilityMapper;
         this.sysTenantPackageCapabilityMapper = sysTenantPackageCapabilityMapper;
         this.sysTenantCapabilityOverrideMapper = sysTenantCapabilityOverrideMapper;
+        this.sysMenuMapper = sysMenuMapper;
         this.catalogService = catalogService;
         this.auditService = auditService;
         this.permissionSnapshotInvalidationService = permissionSnapshotInvalidationService;
         this.tenantAccessPolicy = tenantAccessPolicy;
         this.tenantChangeLogApplicationService = tenantChangeLogApplicationService;
         this.securityPolicyApplicationService = securityPolicyApplicationService;
+        this.tenantBootstrapFacade = tenantBootstrapFacade;
+        this.tenantCapabilityResourceScopeFacade = tenantCapabilityResourceScopeFacade;
     }
 
     @Transactional
@@ -98,18 +107,31 @@ public class TenantManagementService {
         entity.setTenantName(request.tenantName());
         entity.setPlatformLevel(request.platformLevel() ? 1 : 0);
         entity.setTenantStatus(request.tenantStatus() == null ? 1 : request.tenantStatus());
+        entity.setAuthBeginAt(TimeSupport.localDateTimeFromEpochMilli(request.authBeginAt()));
         entity.setExpireAt(TimeSupport.localDateTimeFromEpochMilli(request.expireAt()));
         entity.setPackageCode(request.packageCode());
+        entity.setLogoUrl(trimToNull(request.logoUrl()));
+        entity.setContactName(trimToNull(request.contactName()));
+        entity.setContactPhone(trimToNull(request.contactPhone()));
+        entity.setContactEmail(trimToNull(request.contactEmail()));
+        entity.setWebsite(trimToNull(request.website()));
+        entity.setAddress(trimToNull(request.address()));
         entity.setLifecycleNote(request.lifecycleNote());
         sysTenantMapper.insert(entity);
         securityPolicyApplicationService.ensureTenantPolicy(request.tenantId());
-        saveTenantProfile(request.tenantId(), request.packageCode(), request.packageName(), request.userQuota(),
-                request.storageQuotaGb(), request.capabilityCodes());
+        saveTenantProfile(request.tenantId(), request.packageCode(), request.capabilityCodes());
+        TenantBootstrapFacade.BootstrapResult bootstrapResult = tenantBootstrapFacade.bootstrap(
+                request.tenantId(), request.tenantName(), operator);
         recordTenantChange(request.tenantId(), "CREATED", "tenant", null, request.tenantName(), "创建租户", operator);
+        recordTenantChange(request.tenantId(), "CREATED", "bootstrap", null, bootstrapResult.adminUsername(),
+                "初始化根部门、管理员角色、管理员用户和默认授权", operator);
         recordTenantChange(request.tenantId(), "STATUS", "tenantStatus", null,
                 String.valueOf(entity.getTenantStatus()), "初始化租户状态", operator);
         recordTenantChange(request.tenantId(), "PACKAGE", "packageCode", null,
                 request.packageCode(), "初始化租户套餐", operator);
+        recordTenantChange(request.tenantId(), "PROFILE", "authBeginAt", null, toStringValue(entity.getAuthBeginAt()), "初始化授权开始时间", operator);
+        recordTenantChange(request.tenantId(), "PROFILE", "expireAt", null, toStringValue(entity.getExpireAt()), "初始化授权结束时间", operator);
+        recordTenantChange(request.tenantId(), "PROFILE", "contactName", null, request.contactName(), "初始化联系人", operator);
         recordTenantChange(request.tenantId(), "PROFILE", "lifecycleNote", null, request.lifecycleNote(), "初始化运营备注", operator);
 
         auditService.record("TENANT_CREATED", operator, request.tenantId(), Map.of("tenantId", request.tenantId()));
@@ -123,30 +145,51 @@ public class TenantManagementService {
         SysTenantEntity entity = getTenant(tenantId);
         String oldTenantName = entity.getTenantName();
         Integer oldTenantStatus = entity.getTenantStatus();
+        java.time.LocalDateTime oldAuthBeginAt = entity.getAuthBeginAt();
         java.time.LocalDateTime oldExpireAt = entity.getExpireAt();
+        String oldLogoUrl = entity.getLogoUrl();
+        String oldContactName = entity.getContactName();
+        String oldContactPhone = entity.getContactPhone();
+        String oldContactEmail = entity.getContactEmail();
+        String oldWebsite = entity.getWebsite();
+        String oldAddress = entity.getAddress();
         TenantProfile oldProfile = loadTenantProfiles(List.of(entity)).getOrDefault(tenantId, TenantProfile.empty());
         entity.setTenantName(request.tenantName());
         entity.setPlatformLevel(request.platformLevel() ? 1 : 0);
         if (request.tenantStatus() != null) {
             entity.setTenantStatus(request.tenantStatus());
         }
+        entity.setAuthBeginAt(TimeSupport.localDateTimeFromEpochMilli(request.authBeginAt()));
         entity.setExpireAt(TimeSupport.localDateTimeFromEpochMilli(request.expireAt()));
         entity.setPackageCode(request.packageCode());
+        entity.setLogoUrl(trimToNull(request.logoUrl()));
+        entity.setContactName(trimToNull(request.contactName()));
+        entity.setContactPhone(trimToNull(request.contactPhone()));
+        entity.setContactEmail(trimToNull(request.contactEmail()));
+        entity.setWebsite(trimToNull(request.website()));
+        entity.setAddress(trimToNull(request.address()));
         entity.setLifecycleNote(request.lifecycleNote());
         sysTenantMapper.updateById(entity);
-        saveTenantProfile(tenantId, request.packageCode(), request.packageName(), request.userQuota(),
-                request.storageQuotaGb(), request.capabilityCodes());
+        saveTenantProfile(tenantId, request.packageCode(), request.capabilityCodes());
+        TenantProfile newProfile = loadTenantProfiles(List.of(entity)).getOrDefault(tenantId, TenantProfile.empty());
 
         String operator = SecuritySupport.currentOperator();
         recordIfChanged(tenantId, "PROFILE", "tenantName", oldTenantName, request.tenantName(), "更新租户名称", operator);
         recordIfChanged(tenantId, "STATUS", "tenantStatus", toStringValue(oldTenantStatus), toStringValue(entity.getTenantStatus()), "更新租户状态", operator);
-        recordIfChanged(tenantId, "PROFILE", "expireAt", toStringValue(oldExpireAt), toStringValue(request.expireAt()), "更新到期时间", operator);
-        recordIfChanged(tenantId, "PACKAGE", "packageCode", oldProfile.packageCode(), request.packageCode(), "更新租户套餐编码", operator);
-        recordIfChanged(tenantId, "PACKAGE", "packageName", oldProfile.packageName(), request.packageName(), "更新租户套餐名称", operator);
-        recordIfChanged(tenantId, "PACKAGE", "userQuota", toStringValue(oldProfile.userQuota()), toStringValue(request.userQuota()), "更新用户配额", operator);
-        recordIfChanged(tenantId, "PACKAGE", "storageQuotaGb", toStringValue(oldProfile.storageQuotaGb()), toStringValue(request.storageQuotaGb()), "更新存储配额", operator);
+        recordIfChanged(tenantId, "PROFILE", "authBeginAt", toStringValue(oldAuthBeginAt), toStringValue(entity.getAuthBeginAt()), "更新授权开始时间", operator);
+        recordIfChanged(tenantId, "PROFILE", "expireAt", toStringValue(oldExpireAt), toStringValue(entity.getExpireAt()), "更新授权结束时间", operator);
+        recordIfChanged(tenantId, "PROFILE", "logoUrl", oldLogoUrl, entity.getLogoUrl(), "更新租户 Logo", operator);
+        recordIfChanged(tenantId, "PROFILE", "contactName", oldContactName, entity.getContactName(), "更新联系人姓名", operator);
+        recordIfChanged(tenantId, "PROFILE", "contactPhone", oldContactPhone, entity.getContactPhone(), "更新联系人电话", operator);
+        recordIfChanged(tenantId, "PROFILE", "contactEmail", oldContactEmail, entity.getContactEmail(), "更新联系人邮箱", operator);
+        recordIfChanged(tenantId, "PROFILE", "website", oldWebsite, entity.getWebsite(), "更新官网地址", operator);
+        recordIfChanged(tenantId, "PROFILE", "address", oldAddress, entity.getAddress(), "更新联系地址", operator);
+        recordIfChanged(tenantId, "PACKAGE", "packageCode", oldProfile.packageCode(), newProfile.packageCode(), "更新租户套餐编码", operator);
+        recordIfChanged(tenantId, "PACKAGE", "packageName", oldProfile.packageName(), newProfile.packageName(), "更新租户套餐名称", operator);
+        recordIfChanged(tenantId, "PACKAGE", "userQuota", toStringValue(oldProfile.userQuota()), toStringValue(newProfile.userQuota()), "更新用户配额", operator);
+        recordIfChanged(tenantId, "PACKAGE", "storageQuotaGb", toStringValue(oldProfile.storageQuotaGb()), toStringValue(newProfile.storageQuotaGb()), "更新存储配额", operator);
         recordIfChanged(tenantId, "CAPABILITY", "capabilityCodes", oldProfile.capabilityCodes().isEmpty() ? null : String.join(",", oldProfile.capabilityCodes()),
-                request.capabilityCodes() == null ? null : String.join(",", request.capabilityCodes()), "更新租户能力范围", operator);
+                newProfile.capabilityCodes().isEmpty() ? null : String.join(",", newProfile.capabilityCodes()), "更新租户能力范围", operator);
         recordIfChanged(tenantId, "PROFILE", "lifecycleNote", oldProfile.lifecycleNote(), request.lifecycleNote(), "更新运营备注", operator);
 
         auditService.record("TENANT_UPDATED", operator, tenantId, Map.of("tenantId", tenantId));
@@ -167,8 +210,11 @@ public class TenantManagementService {
         }
 
         sysTenantMapper.deleteById(entity.getId());
-        sysTenantCapabilityOverrideMapper.delete(new LambdaQueryWrapper<SysTenantCapabilityOverrideEntity>()
-                .eq(SysTenantCapabilityOverrideEntity::getTenantId, tenantId));
+        withTenant(tenantId, () -> {
+            sysTenantCapabilityOverrideMapper.delete(new LambdaQueryWrapper<SysTenantCapabilityOverrideEntity>()
+                    .eq(SysTenantCapabilityOverrideEntity::getTenantId, tenantId));
+            return null;
+        });
         recordTenantChange(tenantId, "DELETED", "tenant", entity.getTenantName(), null, "删除租户", operator);
         auditService.record("TENANT_DELETED", operator, tenantId, Map.of("tenantId", entity.getTenantId()));
         evictPrincipalSnapshots();
@@ -220,6 +266,40 @@ public class TenantManagementService {
         return buildCapabilityOverrideView(tenant, profile);
     }
 
+    public TenantCapabilitySummaryView capabilitySummary(String tenantId) {
+        ensureTenantReadable(tenantId);
+        SysTenantEntity tenant = getTenant(tenantId);
+        Map<String, TenantProfile> profiles = loadTenantProfiles(List.of(tenant));
+        TenantProfile profile = profiles.getOrDefault(tenantId, TenantProfile.empty());
+        TenantCapabilityOverrideView overrideView = buildCapabilityOverrideView(tenant, profile);
+        List<String> addedCapabilities = overrideView.overrides().stream()
+                .filter(item -> !item.packageEnabled() && item.effectiveEnabled())
+                .map(CapabilityOverrideItemView::capabilityCode)
+                .toList();
+        List<String> disabledCapabilities = overrideView.overrides().stream()
+                .filter(item -> item.packageEnabled() && !item.effectiveEnabled())
+                .map(CapabilityOverrideItemView::capabilityCode)
+                .toList();
+        ResourceScopeSummary resourceScopeSummary = buildResourceScopeSummary(tenantId);
+        return new TenantCapabilitySummaryView(
+                tenant.getTenantId(),
+                tenant.getPackageCode(),
+                profile.packageName(),
+                overrideView.packageCapabilityCodes(),
+                overrideView.effectiveCapabilityCodes(),
+                addedCapabilities,
+                disabledCapabilities,
+                overrideView.packageCapabilityCodes().size(),
+                overrideView.effectiveCapabilityCodes().size(),
+                addedCapabilities.size(),
+                disabledCapabilities.size(),
+                resourceScopeSummary.visibleMenus(),
+                resourceScopeSummary.grantableMenus(),
+                resourceScopeSummary.visibleMenuCount(),
+                resourceScopeSummary.grantableMenuCount()
+        );
+    }
+
     @Transactional
     public TenantCapabilityOverrideView updateCapabilityOverrides(
             String tenantId,
@@ -264,15 +344,23 @@ public class TenantManagementService {
     private void saveTenantProfile(
             String tenantId,
             String packageCode,
-            String packageName,
-            Integer userQuota,
-            Integer storageQuotaGb,
             java.util.List<String> capabilityCodes
     ) {
-        if (StringUtils.hasText(packageCode)) {
-            upsertPackageDefinition(packageCode, packageName, userQuota, storageQuotaGb, capabilityCodes);
-        }
+        ensurePackageExists(packageCode);
         saveTenantCapabilityOverrides(tenantId, packageCode, capabilityCodes);
+    }
+
+    private void ensurePackageExists(String packageCode) {
+        if (!StringUtils.hasText(packageCode)) {
+            return;
+        }
+        Long count = withPlatformTenant(() -> sysTenantPackageMapper.selectCount(new LambdaQueryWrapper<SysTenantPackageEntity>()
+                .eq(SysTenantPackageEntity::getTenantId, "platform")
+                .eq(SysTenantPackageEntity::getPackageCode, packageCode)
+                .eq(SysTenantPackageEntity::getDeleted, 0)));
+        if (count == null || count == 0) {
+            throw new BusinessException("租户套餐不存在: " + packageCode);
+        }
     }
 
     private Map<String, TenantProfile> loadTenantProfiles(List<SysTenantEntity> tenants) {
@@ -317,14 +405,9 @@ public class TenantManagementService {
                 java.util.LinkedHashMap::new,
                 java.util.stream.Collectors.mapping(SysTenantPackageCapabilityEntity::getCapabilityCode, java.util.stream.Collectors.toList())
         )));
-        Map<String, List<SysTenantCapabilityOverrideEntity>> overrides = sysTenantCapabilityOverrideMapper.selectList(
-                new LambdaQueryWrapper<SysTenantCapabilityOverrideEntity>()
-                        .in(SysTenantCapabilityOverrideEntity::getTenantId, tenants.stream().map(SysTenantEntity::getTenantId).toList())
-        ).stream().collect(java.util.stream.Collectors.groupingBy(
-                SysTenantCapabilityOverrideEntity::getTenantId,
-                java.util.LinkedHashMap::new,
-                java.util.stream.Collectors.toList()
-        ));
+        Map<String, List<SysTenantCapabilityOverrideEntity>> overrides = loadTenantCapabilityOverrides(
+                tenants.stream().map(SysTenantEntity::getTenantId).toList()
+        );
         Map<String, TenantProfile> result = new java.util.LinkedHashMap<>();
         for (SysTenantEntity tenant : tenants) {
             SysTenantPackageEntity pkg = packages.get(tenant.getPackageCode());
@@ -366,6 +449,7 @@ public class TenantManagementService {
                 tenant.getTenantName(),
                 tenant.getPlatformLevel() != null && tenant.getPlatformLevel() == 1,
                 tenant.getTenantStatus(),
+                TimeSupport.toEpochMilli(tenant.getAuthBeginAt()),
                 TimeSupport.toEpochMilli(tenant.getExpireAt()),
                 profile.packageCode(),
                 profile.packageName(),
@@ -373,6 +457,12 @@ public class TenantManagementService {
                 profile.storageQuotaGb(),
                 profile.capabilityCodes(),
                 profile.capabilityDescriptions(),
+                tenant.getLogoUrl(),
+                tenant.getContactName(),
+                tenant.getContactPhone(),
+                tenant.getContactEmail(),
+                tenant.getWebsite(),
+                tenant.getAddress(),
                 profile.lifecycleNote()
         );
     }
@@ -399,10 +489,9 @@ public class TenantManagementService {
                 .distinct()
                 .toList()
                 : List.of());
-        Map<String, SysTenantCapabilityOverrideEntity> overrideMap = sysTenantCapabilityOverrideMapper.selectList(
-                new LambdaQueryWrapper<SysTenantCapabilityOverrideEntity>()
-                        .eq(SysTenantCapabilityOverrideEntity::getTenantId, tenant.getTenantId())
-        ).stream().collect(java.util.stream.Collectors.toMap(
+        Map<String, SysTenantCapabilityOverrideEntity> overrideMap = loadTenantCapabilityOverrides(List.of(tenant.getTenantId()))
+                .getOrDefault(tenant.getTenantId(), List.of())
+                .stream().collect(java.util.stream.Collectors.toMap(
                 SysTenantCapabilityOverrideEntity::getCapabilityCode,
                 java.util.function.Function.identity(),
                 (left, right) -> right,
@@ -444,104 +533,52 @@ public class TenantManagementService {
         );
     }
 
-    private void upsertPackageDefinition(
-            String packageCode,
-            String packageName,
-            Integer userQuota,
-            Integer storageQuotaGb,
-            List<String> capabilityCodes
-    ) {
-        SysTenantPackageEntity entity = withPlatformTenant(() -> sysTenantPackageMapper.selectOne(new LambdaQueryWrapper<SysTenantPackageEntity>()
-                .eq(SysTenantPackageEntity::getTenantId, "platform")
-                .eq(SysTenantPackageEntity::getPackageCode, packageCode)
-                .eq(SysTenantPackageEntity::getDeleted, 0)
-                .last("limit 1")));
-        if (entity == null) {
-            entity = new SysTenantPackageEntity();
-            entity.setTenantId("platform");
-            entity.setPackageCode(packageCode);
-            entity.setEnabled(1);
-            entity.setPackageDesc(packageName);
-            entity.setPackageName(StringUtils.hasText(packageName) ? packageName : packageCode);
-            entity.setUserQuota(userQuota);
-            entity.setStorageQuotaGb(storageQuotaGb);
-            SysTenantPackageEntity insertEntity = entity;
-            withPlatformTenant(() -> sysTenantPackageMapper.insert(insertEntity));
-        } else {
-            entity.setPackageName(StringUtils.hasText(packageName) ? packageName : entity.getPackageName());
-            entity.setUserQuota(userQuota);
-            entity.setStorageQuotaGb(storageQuotaGb);
-            SysTenantPackageEntity updateEntity = entity;
-            withPlatformTenant(() -> sysTenantPackageMapper.updateById(updateEntity));
-        }
-        savePackageCapabilities(packageCode, capabilityCodes);
-    }
-
-    private void savePackageCapabilities(String packageCode, List<String> capabilityCodes) {
-        if (!StringUtils.hasText(packageCode)) {
+    private void saveTenantCapabilityOverrides(String tenantId, String packageCode, List<String> requestedCapabilityCodes) {
+        if (requestedCapabilityCodes == null) {
+            clearTenantCapabilityOverrides(tenantId);
             return;
         }
-        List<String> normalizedCodes = capabilityCodes == null ? List.of() : capabilityCodes.stream()
-                .filter(StringUtils::hasText)
-                .map(String::trim)
-                .distinct()
-                .toList();
-        ensureCapabilitiesExist(normalizedCodes);
-        withPlatformTenant(() -> sysTenantPackageCapabilityMapper.delete(new LambdaQueryWrapper<SysTenantPackageCapabilityEntity>()
-                .eq(SysTenantPackageCapabilityEntity::getTenantId, "platform")
-                .eq(SysTenantPackageCapabilityEntity::getPackageCode, packageCode)));
-        String operator = SecuritySupport.currentOperator();
-        for (String code : normalizedCodes) {
-            SysTenantPackageCapabilityEntity link = new SysTenantPackageCapabilityEntity();
-            link.setTenantId("platform");
-            link.setPackageCode(packageCode);
-            link.setCapabilityCode(code);
-            link.setCreatedBy(operator);
-            link.setUpdatedBy(operator);
-            withPlatformTenant(() -> sysTenantPackageCapabilityMapper.insert(link));
-        }
-    }
-
-    private void saveTenantCapabilityOverrides(String tenantId, String packageCode, List<String> requestedCapabilityCodes) {
-        List<String> requested = requestedCapabilityCodes == null ? List.of() : requestedCapabilityCodes.stream()
+        List<String> requested = requestedCapabilityCodes.stream()
                 .filter(StringUtils::hasText)
                 .map(String::trim)
                 .distinct()
                 .toList();
         ensureCapabilitiesExist(requested);
-        List<String> packageCapabilities = StringUtils.hasText(packageCode)
+        List<String> packageCapabilities = withPlatformTenant(() -> StringUtils.hasText(packageCode)
                 ? sysTenantPackageCapabilityMapper.selectList(new LambdaQueryWrapper<SysTenantPackageCapabilityEntity>()
                         .eq(SysTenantPackageCapabilityEntity::getTenantId, "platform")
                         .eq(SysTenantPackageCapabilityEntity::getPackageCode, packageCode))
                 .stream().map(SysTenantPackageCapabilityEntity::getCapabilityCode).toList()
-                : List.of();
+                : List.of());
         java.util.Set<String> packageSet = new java.util.LinkedHashSet<>(packageCapabilities);
         java.util.Set<String> requestedSet = new java.util.LinkedHashSet<>(requested);
-        sysTenantCapabilityOverrideMapper.delete(new LambdaQueryWrapper<SysTenantCapabilityOverrideEntity>()
-                .eq(SysTenantCapabilityOverrideEntity::getTenantId, tenantId));
+        clearTenantCapabilityOverrides(tenantId);
         String operator = SecuritySupport.currentOperator();
-        for (String code : requestedSet) {
-            if (!packageSet.contains(code)) {
-                SysTenantCapabilityOverrideEntity entity = new SysTenantCapabilityOverrideEntity();
-                entity.setTenantId(tenantId);
-                entity.setCapabilityCode(code);
-                entity.setEnabled(1);
-                entity.setCreatedBy(operator);
-                entity.setUpdatedBy(operator);
-                sysTenantCapabilityOverrideMapper.insert(entity);
+        withTenant(tenantId, () -> {
+            for (String code : requestedSet) {
+                if (!packageSet.contains(code)) {
+                    SysTenantCapabilityOverrideEntity entity = new SysTenantCapabilityOverrideEntity();
+                    entity.setTenantId(tenantId);
+                    entity.setCapabilityCode(code);
+                    entity.setEnabled(1);
+                    entity.setCreatedBy(operator);
+                    entity.setUpdatedBy(operator);
+                    sysTenantCapabilityOverrideMapper.insert(entity);
+                }
             }
-        }
-        for (String code : packageSet) {
-            if (!requestedSet.contains(code)) {
-                SysTenantCapabilityOverrideEntity entity = new SysTenantCapabilityOverrideEntity();
-                entity.setTenantId(tenantId);
-                entity.setCapabilityCode(code);
-                entity.setEnabled(0);
-                entity.setCreatedBy(operator);
-                entity.setUpdatedBy(operator);
-                sysTenantCapabilityOverrideMapper.insert(entity);
+            for (String code : packageSet) {
+                if (!requestedSet.contains(code)) {
+                    SysTenantCapabilityOverrideEntity entity = new SysTenantCapabilityOverrideEntity();
+                    entity.setTenantId(tenantId);
+                    entity.setCapabilityCode(code);
+                    entity.setEnabled(0);
+                    entity.setCreatedBy(operator);
+                    entity.setUpdatedBy(operator);
+                    sysTenantCapabilityOverrideMapper.insert(entity);
+                }
             }
-        }
+            return null;
+        });
     }
 
     private void saveTenantCapabilityOverridesFromRequest(
@@ -566,30 +603,55 @@ public class TenantManagementService {
                 .map(SysTenantPackageCapabilityEntity::getCapabilityCode)
                 .toList()
                 : List.of()));
-        sysTenantCapabilityOverrideMapper.delete(new LambdaQueryWrapper<SysTenantCapabilityOverrideEntity>()
-                .eq(SysTenantCapabilityOverrideEntity::getTenantId, tenantId));
+        clearTenantCapabilityOverrides(tenantId);
         String operator = SecuritySupport.currentOperator();
-        for (UpdateTenantCapabilityOverridesRequest.CapabilityOverrideItem item : safeOverrides) {
-            if (!StringUtils.hasText(item.capabilityCode())) {
-                continue;
+        withTenant(tenantId, () -> {
+            for (UpdateTenantCapabilityOverridesRequest.CapabilityOverrideItem item : safeOverrides) {
+                if (!StringUtils.hasText(item.capabilityCode())) {
+                    continue;
+                }
+                String code = item.capabilityCode().trim();
+                boolean packageEnabled = packageSet.contains(code);
+                Boolean overrideEnabled = item.enabled();
+                String descOverride = StringUtils.hasText(item.capabilityDescOverride()) ? item.capabilityDescOverride().trim() : null;
+                boolean shouldPersist = overrideEnabled != null || StringUtils.hasText(descOverride);
+                if (!shouldPersist) {
+                    continue;
+                }
+                SysTenantCapabilityOverrideEntity entity = new SysTenantCapabilityOverrideEntity();
+                entity.setTenantId(tenantId);
+                entity.setCapabilityCode(code);
+                entity.setEnabled(overrideEnabled == null ? (packageEnabled ? 1 : 0) : (overrideEnabled ? 1 : 0));
+                entity.setCapabilityDescOverride(descOverride);
+                entity.setCreatedBy(operator);
+                entity.setUpdatedBy(operator);
+                sysTenantCapabilityOverrideMapper.insert(entity);
             }
-            String code = item.capabilityCode().trim();
-            boolean packageEnabled = packageSet.contains(code);
-            Boolean overrideEnabled = item.enabled();
-            String descOverride = StringUtils.hasText(item.capabilityDescOverride()) ? item.capabilityDescOverride().trim() : null;
-            boolean shouldPersist = overrideEnabled != null || StringUtils.hasText(descOverride);
-            if (!shouldPersist) {
-                continue;
-            }
-            SysTenantCapabilityOverrideEntity entity = new SysTenantCapabilityOverrideEntity();
-            entity.setTenantId(tenantId);
-            entity.setCapabilityCode(code);
-            entity.setEnabled(overrideEnabled == null ? (packageEnabled ? 1 : 0) : (overrideEnabled ? 1 : 0));
-            entity.setCapabilityDescOverride(descOverride);
-            entity.setCreatedBy(operator);
-            entity.setUpdatedBy(operator);
-            sysTenantCapabilityOverrideMapper.insert(entity);
+            return null;
+        });
+    }
+
+    private void clearTenantCapabilityOverrides(String tenantId) {
+        withTenant(tenantId, () -> {
+            sysTenantCapabilityOverrideMapper.delete(new LambdaQueryWrapper<SysTenantCapabilityOverrideEntity>()
+                    .eq(SysTenantCapabilityOverrideEntity::getTenantId, tenantId));
+            return null;
+        });
+    }
+
+    private Map<String, List<SysTenantCapabilityOverrideEntity>> loadTenantCapabilityOverrides(List<String> tenantIds) {
+        if (tenantIds == null || tenantIds.isEmpty()) {
+            return Map.of();
         }
+        Map<String, List<SysTenantCapabilityOverrideEntity>> result = new java.util.LinkedHashMap<>();
+        for (String tenantId : tenantIds.stream().filter(StringUtils::hasText).distinct().toList()) {
+            List<SysTenantCapabilityOverrideEntity> records = withTenant(tenantId, () -> sysTenantCapabilityOverrideMapper.selectList(
+                    new LambdaQueryWrapper<SysTenantCapabilityOverrideEntity>()
+                            .eq(SysTenantCapabilityOverrideEntity::getTenantId, tenantId)
+            ));
+            result.put(tenantId, records);
+        }
+        return result;
     }
 
     private void ensureCapabilitiesExist(List<String> capabilityCodes) {
@@ -603,21 +665,10 @@ public class TenantManagementService {
                 .stream()
                 .map(SysTenantCapabilityEntity::getCapabilityCode)
                 .toList());
-        String operator = SecuritySupport.currentOperator();
         for (String code : capabilityCodes) {
-            if (existing.contains(code)) {
-                continue;
+            if (!existing.contains(code)) {
+                throw new BusinessException("能力编码不存在: " + code);
             }
-            SysTenantCapabilityEntity entity = new SysTenantCapabilityEntity();
-            entity.setTenantId("platform");
-            entity.setCapabilityCode(code);
-            entity.setCapabilityName(code);
-            entity.setCapabilityDesc(defaultCapabilityDescription(code));
-            entity.setSortOrder(999);
-            entity.setEnabled(1);
-            entity.setCreatedBy(operator);
-            entity.setUpdatedBy(operator);
-            withPlatformTenant(() -> sysTenantCapabilityMapper.insert(entity));
         }
     }
 
@@ -655,20 +706,6 @@ public class TenantManagementService {
         tenantAccessPolicy.requirePlatformSuperAdmin();
     }
 
-    private String defaultCapabilityDescription(String code) {
-        return switch (code) {
-            case "auth" -> "轻量登录、会话、强制下线与安全治理能力";
-            case "user" -> "用户目录、启停、角色分配与组织可见范围管理";
-            case "role" -> "角色模型、权限树与数据范围授权";
-            case "dept" -> "组织树、负责人和部门层级治理";
-            case "tenant" -> "租户套餐、能力配置与生命周期治理";
-            case "system" -> "字典、参数、公告与分类配置管理";
-            case "audit" -> "审计查询、导出与授权记录联动";
-            case "notice" -> "公告发布与租户通知能力";
-            default -> code + " 能力已启用，可在租户侧继续扩展说明。";
-        };
-    }
-
     private String capabilityDescription(SysTenantCapabilityEntity capability) {
         if (capability == null || !StringUtils.hasText(capability.getCapabilityDesc())) {
             return "该能力已启用，可在租户侧继续扩展说明。";
@@ -704,6 +741,26 @@ public class TenantManagementService {
         return StringUtils.hasText(value) ? value.trim() : null;
     }
 
+    private ResourceScopeSummary buildResourceScopeSummary(String tenantId) {
+        List<SysMenuEntity> menus = withPlatformTenant(() -> sysMenuMapper.selectList(new LambdaQueryWrapper<SysMenuEntity>()
+                .eq(SysMenuEntity::getTenantId, "platform")
+                .eq(SysMenuEntity::getDeleted, 0)
+                .eq(SysMenuEntity::getEnabled, 1)
+                .orderByAsc(SysMenuEntity::getOrderNo)
+                .orderByAsc(SysMenuEntity::getId)));
+        java.util.Set<Long> visibleIds = tenantCapabilityResourceScopeFacade.visibleMenuIds(tenantId, menus);
+        java.util.Set<Long> grantableIds = tenantCapabilityResourceScopeFacade.grantableMenuIds(tenantId, menus);
+        List<ResourceScopeMenuView> visibleMenus = menus.stream()
+                .filter(menu -> menu.getId() != null && visibleIds.contains(menu.getId()))
+                .map(ResourceScopeMenuView::from)
+                .toList();
+        List<ResourceScopeMenuView> grantableMenus = menus.stream()
+                .filter(menu -> menu.getId() != null && grantableIds.contains(menu.getId()))
+                .map(ResourceScopeMenuView::from)
+                .toList();
+        return new ResourceScopeSummary(visibleMenus, grantableMenus, visibleMenus.size(), grantableMenus.size());
+    }
+
     @Schema(description = "租户变更记录")
     public record TenantChangeView(
             @Schema(description = "记录 ID") Long id,
@@ -729,6 +786,57 @@ public class TenantManagementService {
             @Schema(description = "资料变更数") Long profileChanges,
             @Schema(description = "字段影响分布") Map<String, Long> affectedFieldCounts,
             @Schema(description = "最近轨迹") List<TenantChangeView> recentTimeline
+    ) {
+    }
+
+    @Schema(description = "租户能力摘要")
+    public record TenantCapabilitySummaryView(
+            @Schema(description = "租户编码") String tenantId,
+            @Schema(description = "套餐编码") String packageCode,
+            @Schema(description = "套餐名称") String packageName,
+            @Schema(description = "套餐默认能力编码集合") List<String> packageCapabilityCodes,
+            @Schema(description = "当前生效能力编码集合") List<String> effectiveCapabilityCodes,
+            @Schema(description = "相对套餐新增的能力编码集合") List<String> addedCapabilities,
+            @Schema(description = "相对套餐禁用的能力编码集合") List<String> disabledCapabilities,
+            @Schema(description = "套餐默认能力数量") int packageCapabilityCount,
+            @Schema(description = "当前生效能力数量") int effectiveCapabilityCount,
+            @Schema(description = "新增能力数量") int addedCapabilityCount,
+            @Schema(description = "禁用能力数量") int disabledCapabilityCount,
+            @Schema(description = "实际可见菜单") List<ResourceScopeMenuView> visibleMenus,
+            @Schema(description = "实际可授权菜单") List<ResourceScopeMenuView> grantableMenus,
+            @Schema(description = "实际可见菜单数量") int visibleMenuCount,
+            @Schema(description = "实际可授权菜单数量") int grantableMenuCount
+    ) {
+    }
+
+    @Schema(description = "租户资源范围菜单")
+    public record ResourceScopeMenuView(
+            @Schema(description = "菜单 ID") Long id,
+            @Schema(description = "父级菜单 ID") Long parentId,
+            @Schema(description = "菜单名称") String menuName,
+            @Schema(description = "菜单类型") String menuType,
+            @Schema(description = "资源键") String resourceKey,
+            @Schema(description = "授权键") String grantKey,
+            @Schema(description = "路由路径") String path
+    ) {
+        static ResourceScopeMenuView from(SysMenuEntity menu) {
+            return new ResourceScopeMenuView(
+                    menu.getId(),
+                    menu.getParentId(),
+                    menu.getMenuName(),
+                    menu.getMenuType(),
+                    menu.getResourceKey(),
+                    menu.getGrantKey(),
+                    menu.getPath()
+            );
+        }
+    }
+
+    private record ResourceScopeSummary(
+            List<ResourceScopeMenuView> visibleMenus,
+            List<ResourceScopeMenuView> grantableMenus,
+            int visibleMenuCount,
+            int grantableMenuCount
     ) {
     }
 
